# convex-hull-simulation

./: .gitignore  Cargo.toml  Makefile  README.md  convex_hull_simulation-c04d73c511cc6f6d.js  index.html
.github/workflows/: pages.yml  rust.yml
doc/: help.html  search-index.js
doc/convex_hull_simulation/: all.html  constant.MAX_ZOOM_OUT.html  constant.TEXT_SIZE.html  fn.check_egui_wants_focus.html  fn.create_combo_box.html  fn.despawn_entities.html  fn.graphics_drawing.html  fn.keyboard_input_system.html  fn.main.html  fn.mouse_position_system.html  fn.pan_cam_system.html  fn.setup.html  fn.ui.html  index.html  struct.ColorText.html  struct.EguiWantsFocus.html  struct.PointData.html  struct.PointSingle.html  struct.SimulationTimer.html  struct.TextComment.html
doc/trait.impl/core/clone/: trait.Clone.js
docs/: Read_this_for_info.md  crates.js  index.html  search-index.js  settings.html  src-files.js
docs/convex_hull_simulation/: all.html  constant.MAX_ZOOM_OUT.html  constant.TEXT_SIZE.html  fn.check_egui_wants_focus.html  fn.create_combo_box.html  fn.despawn_entities.html  fn.graphics_drawing.html  fn.keyboard_input_system.html  fn.main.html  fn.mouse_position_system.html  fn.pan_cam_system.html  fn.setup.html  fn.ui.html  index.html  sidebar-items.js  struct.ColorText.html  struct.EguiWantsFocus.html  struct.PointData.html  struct.PointSingle.html  struct.SimulationTimer.html  struct.TextComment.html
profiling/: Cargo.toml
profiling/benches/: benchmark.rs
profiling/data/: jarvis_march.prof  kirk_seidel.prof
src/: algorithms.rs  distributions.rs  main.rs
(+54 files in other folders)
