[package]
name = "convex_hull_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.0"} 
bevy_egui = "0.25.0"
bevy_pancam = "0.11.0"
copypasta = "0.10.1"
egui_extras = "0.26.2"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
rustflags = ["--cfg=web_sys_unstable_apis"]
